<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.knaujolimac.mismapas.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sitios_frecuencia" />


    <LinearLayout
        android:paddingTop="@dimen/padding_top"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_botones"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/btnDeporte"
                        android:src="@drawable/deporte"
                        android:layout_width="@dimen/image_button"
                        android:layout_height="@dimen/image_button"
                        android:onClick="onClick"/>

                    <TextView
                        android:paddingTop="10dp"
                        android:textStyle="bold"
                        android:id="@+id/tvPolideportivo"
                        android:text="@string/sitio_polideportivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/padding_botones"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/btnParque"
                        android:layout_width="@dimen/image_button"
                        android:layout_height="@dimen/image_button"
                        android:background="@drawable/parque"
                        android:onClick="onClick"/>

                    <TextView
                        android:paddingTop="10dp"
                        android:id="@+id/tvParque"
                        android:textStyle="bold"
                        android:text="@string/sitio_parque_sancristobal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/padding_botones"
                    android:layout_height="match_parent">


                    <ImageButton
                        android:id="@+id/btnIglesia"
                        android:layout_width="@dimen/image_button"
                        android:layout_height="@dimen/image_button"
                        android:background="@drawable/iglesia"
                        android:onClick="onClick"/>

                    <TextView
                        android:paddingTop="10dp"
                        android:id="@+id/tvIglseia"
                        android:textStyle="bold"
                        android:text="@string/sitio_zona_iglesia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/padding_botones"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/btnZonaComidas"
                        android:layout_width="@dimen/image_button"
                        android:layout_height="@dimen/image_button"
                        android:background="@drawable/zonacomidas"
                        android:onClick="onClick"/>

                    <TextView
                        android:paddingTop="10dp"
                        android:id="@+id/tvZona"
                        android:textStyle="bold"
                        android:text="@string/sitio_zona_comidas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
